@@ -206,6 +206,7 @@ namespace libtorrent
 			, low_prio_disk(true)
 			, local_service_announce_interval(5 * 60)
 			, dht_announce_interval(15 * 60)
+			, dht_max_torrents(3000)
 			, udp_tracker_token_expiry(60)
 			, volatile_read_cache(false)
 			, guided_read_cache(true)
@@ -779,6 +780,9 @@ namespace libtorrent
 		// number of seconds between DHT announces for
 		// torrents. Defaults to 15 minutes
 		int dht_announce_interval;
+
+		// this is the max number of torrents the DHT will track
+		int dht_max_torrents;
 
 		// the number of seconds a connection ID received
 		// from a UDP tracker is valid for. This is specified
